# nms-custom

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_baseline_schema.py  0002_telemetry_mvp_schema.py  0003_timescale_retention_metrics.py  0004_services.py  0005_service_dependencies.py  0006_service_score_history.py  0007_service_target_score.py  0008_command_runs_and_schedules.py  0009_settings_system_network_alarms.py  0010_service_dependency_richer_modeling.py  0011_saved_alarm_filters.py  0012_forwarding_targets.py  0013_device_software_version.py  0014_physical_inventory_components.py  0015_config_backups.py  0016_bulkstats.py
backend/app/: __init__.py  config.py  database.py  main.py  server.py
backend/app/api/: ai_ops.py  alarm_rules.py  alarms.py  assurance.py  bulkstats.py  command_schedules.py  commands.py  console.py  credentials.py  dashboard.py  devices.py  discovery.py  forwarding.py  health.py  ios.py  kpi_thresholds.py  lab.py  metrics.py  mibs.py  monitoring_policies.py  performance.py  permissions_catalog.py  report_schedules.py  reports.py  services.py  settings.py  system.py  telemetry.py  topology.py
backend/app/models/: __init__.py  alarm.py  alarm_filter.py  alarm_rule.py  audit.py  bulkstats.py  command.py  command_run.py  command_schedule.py  config_backup.py  credential.py  device.py  forwarding.py  interface.py  inventory.py  ios_version.py  kpi.py  kpi_threshold.py  mib.py  monitoring_policy.py  physical_inventory.py  report_schedule.py  service.py  system.py  telemetry.py  topology.py
backend/app/schemas/: alarm.py  alarm_rule.py  audit.py  bulkstats.py  command.py  credential.py  device.py  discovery.py  forwarding.py  interface.py  ios.py  kpi.py  kpi_threshold.py  mib.py  monitoring_policy.py  report.py  report_schedule.py  telemetry.py  topology.py
backend/app/security/: __init__.py  allowlist.py  audit.py  auth.py  body_size.py  crypto.py  passwords.py  rate_limit.py  redaction.py
backend/app/services/: __init__.py  account_audit.py  command_export.py  config_drift.py  email_sender.py  retention.py  system_admin.py
backend/app/workers/: __init__.py  run.py  supervisor.py
backend/data/audit/: privileged_account_audit.jsonl
backend/data/mibs/: test.mib
backend/scripts/: seed_bulkstats_disc_reason_catalog.py
backend/tests/: conftest.py  test_alarm_export.py  test_alarm_filters.py  test_chassis_api.py  test_chassis_asset_coverage.py  test_config_drift.py  test_device_export.py  test_forwarding.py  test_interface_admin_status.py  test_trap_receiver_v3.py
backend/tests/api/: test_ai_ops_assistant_api.py  test_allowed_hosts.py  test_bulkstats_api.py  test_command_schedules.py  test_commands_bulk.py  test_commands_export.py  test_lab_health_histograms.py  test_performance_api.py  test_routes_smoke.py  test_services_n_plus_one.py  test_settings_admin.py  test_system_health.py  test_telemetry_api.py
backend/tests/integration/: test_receiver_udp_socket.py  test_trap_receiver_socket.py
backend/tests/security/: __init__.py  test_api_auth_endpoint.py  test_command_allowlist.py  (+6 more)
(+529 files in other folders)
