[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nms-custom"
version = "0.1.0"
description = "Network Management System inspired by Cisco Prime"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "asyncpg-stub>=0.5",
    "asyncpgext>=0.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "pymysql>=1.1",
    "httpx>=0.27",
    "pysnmp-lextudio>=6.2",
    "asyncssh>=2.16",
    "cryptography>=43.0",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
    "reportlab>=4.2",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.21",
    "loguru>=0.7",
    "rich>=13.9",
    "alembic>=1.14",
    "redis>=5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.27",
    "types-redis>=5.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint]
per-file-ignores = {"tests/**" = ["S101"]}

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live socket / DB tests (may be slow)",
]
