[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nms-custom"
version = "1.0.0"
description = "Network Management System inspired by Cisco Prime"
requires-python = ">=3.12"
# Runtime dependencies — single source of truth.
# requirements.txt is a derived lockfile; do not add packages there directly.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    # pysnmp 7.x is the lextudio-maintained fork, published under the original
    # `pysnmp` name on PyPI. Do NOT use `pysnmp-lextudio` (legacy alias, 6.x).
    "pysnmp>=7.1",
    "pyasn1>=0.6.3",
    "asyncssh>=2.16",
    "cryptography>=43.0",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
    "reportlab>=4.2",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.21",
    "loguru>=0.7",
    "rich>=13.9",
    "alembic>=1.14",
    "redis>=5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.27",
    "types-redis>=5.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint]
per-file-ignores = {"tests/**" = ["S101"]}

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live socket / DB tests (may be slow)",
]
